--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: 'gradle'
-    
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
     
     - name: Build debug APK
-      run: ./gradlew assembleDebug --no-daemon
+      run: ./gradlew assembleDebug --no-daemon --no-build-cache
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
